# FourPillarsOfDestiny

./: .gitignore  AppController.cpp  AppController.h  CMakeLists.txt  Main.qml  README.md  main.cpp
data/rules/: taizan_rules.json
data/solar_terms/: provisional_solar_terms.json  sample_solar_terms.json  verified_solar_terms.json
docs/: requirements.md
src/: AppController.cpp  AppController.h  BirthInfo.cpp  BirthInfo.h  ChartCalculator.cpp  ChartCalculator.h  ChartResult.cpp  ChartResult.h  InterpretationEngine.cpp  InterpretationEngine.h  InterpretationResult.cpp  InterpretationResult.h  JsonRecordStorage.cpp  JsonRecordStorage.h  RecordExportService.cpp  RecordExportService.h  SavedChartRecord.cpp  SavedChartRecord.h  SolarTermDataSource.cpp  SolarTermDataSource.h  SolarTermResolver.cpp  SolarTermResolver.h
src/qml/pages/: ChartResultPage.qml  HomePage.qml  InputPage.qml  SavedRecordsPage.qml
tests/: CoreTests.cpp
tests/data/: expected_annual_fortunes.csv  expected_judgement.csv  expected_luck_cycle.csv  expected_pillars.csv  expected_relations.csv  spec_gap_registry.json  test_samples_master.csv  verification_cases.json
tools/: generate_verification_dataset_report.py
